--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,45 @@
 group = 'com.thiagohora.hibernatejpa'
 version = '0.0.1-SNAPSHOT'
 
+repositories {
+	mavenLocal()
+	mavenCentral()
+}
+
 buildscript {
 	ext {
 		springBootVersion = '1.3.8.RELEASE'
 		dependencyManager = '0.6.1.RELEASE'
+		//hibernateVersion = '5.0.10.Final'
 	}
 	repositories {
+		mavenLocal()
 		mavenCentral()
 	}
 	dependencies {
 		classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
 		classpath "io.spring.gradle:dependency-management-plugin:${dependencyManager}"
+		//classpath "org.hibernate:hibernate-gradle-plugin:${hibernateVersion}"
 	}
 }
 
-apply plugin: 'spring-boot'
 apply plugin: 'java'
+apply plugin: 'spring-boot'
+//apply plugin: 'org.hibernate.orm'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-repositories {
-	mavenCentral()
+ext {
+	hibernateVersion = '4.3.10.Final'
 }
-
+/*
+hibernate {
+	enhance {
+		enableLazyInitialization = true
+	}
+}
+*/
 
 dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.6'
@@ -32,10 +47,11 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-web"
 	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 	implementation "org.springframework.boot:spring-boot-starter-test"
-	implementation 'org.springframework.boot:spring-boot-starter-jooq'
 	//implementation "org.hibernate:hibernate-core:5.0.4.Final"
 	//implementation "org.hibernate:hibernate-entitymanager:5.0.4.Final"
-	implementation "org.hibernate:hibernate-core:4.3.10.Final"
-	implementation "org.hibernate:hibernate-entitymanager:4.3.10.Final"
 	implementation "com.h2database:h2"
+	implementation "org.hibernate:hibernate-core:${hibernateVersion}"
+	implementation "org.hibernate:hibernate-entitymanager:${hibernateVersion}"
+	//implementation "org.springframework:spring-instrument:4.2.8.RELEASE"
 }
+
