--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,10 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.properties.hibernate.jdbc.batch_size=3
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+#spring.jpa.properties.hibernate.ejb.use_class_enhancer=false
